Initial exploratory data analysis

--- a/proj2/proj2.ipynb
+++ b/proj2/proj2.ipynb
@@ -2,9 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8000, 6)\n",
+      "   id                                               text  is_humor  \\\n",
+      "0   1  TENNESSEE: We're the best state. Nobody even c...         1   \n",
+      "1   2  A man inserted an advertisement in the classif...         1   \n",
+      "2   3  How many men does it take to open a can of bee...         1   \n",
+      "3   4  Told my mom I hit 1200 Twitter followers. She ...         1   \n",
+      "4   5  Roses are dead. Love is fake. Weddings are bas...         1   \n",
+      "\n",
+      "   humor_rating  humor_controversy  offense_rating  \n",
+      "0          2.42                1.0             0.2  \n",
+      "1          2.50                1.0             1.1  \n",
+      "2          1.95                0.0             2.4  \n",
+      "3          2.11                1.0             0.0  \n",
+      "4          2.78                0.0             0.1  \n",
+      "(8000, 5)\n",
+      "   id                                               text  is_humor  \\\n",
+      "0   1  TENNESSEE: We're the best state. Nobody even c...         1   \n",
+      "1   2  A man inserted an advertisement in the classif...         1   \n",
+      "2   3  How many men does it take to open a can of bee...         1   \n",
+      "3   4  Told my mom I hit 1200 Twitter followers. She ...         1   \n",
+      "4   5  Roses are dead. Love is fake. Weddings are bas...         1   \n",
+      "\n",
+      "   humor_rating  humor_controversy  \n",
+      "0          2.42                1.0  \n",
+      "1          2.50                1.0  \n",
+      "2          1.95                0.0  \n",
+      "3          2.11                1.0  \n",
+      "4          2.78                0.0  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -18,6 +53,24 @@
     "\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "dataset = pd.read_csv('files/train.csv')\n",
+    "print(dataset.shape)\n",
+    "print(dataset.head())\n",
+    "\n",
+    "# Exploratory Data Analysis\n",
+    "\n",
+    "## selecting important columns only (dropping 'offense_rating')\n",
+    "dataset = dataset[['id', 'text', 'is_humor', 'humor_rating', 'humor_controversy']]\n",
+    "print(dataset.shape)\n",
+    "print(dataset.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "data_list =[]\n",
     "data_list2 =[]\n",
     "raw_text =\"\"\n",
