--- a/proj2/proj2.ipynb
+++ b/proj2/proj2.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Humor Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -22,21 +31,7 @@
       "1          2.50                1.0             1.1  \n",
       "2          1.95                0.0             2.4  \n",
       "3          2.11                1.0             0.0  \n",
-      "4          2.78                0.0             0.1  \n",
-      "(1000, 5)\n",
-      "   id                                               text  is_humor  \\\n",
-      "0   1  TENNESSEE: We're the best state. Nobody even c...         1   \n",
-      "1   2  A man inserted an advertisement in the classif...         1   \n",
-      "2   3  How many men does it take to open a can of bee...         1   \n",
-      "3   4  Told my mom I hit 1200 Twitter followers. She ...         1   \n",
-      "4   5  Roses are dead. Love is fake. Weddings are bas...         1   \n",
-      "\n",
-      "   humor_rating  humor_controversy  \n",
-      "0          2.42                1.0  \n",
-      "1          2.50                1.0  \n",
-      "2          1.95                0.0  \n",
-      "3          2.11                1.0  \n",
-      "4          2.78                0.0  \n"
+      "4          2.78                0.0             0.1  \n"
      ]
     }
    ],
@@ -52,27 +47,87 @@
     "from nltk.stem import WordNetLemmatizer\n",
     "\n",
     "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "# Importing dataset\n",
     "dataset = pd.read_csv('files/train.csv', nrows=1000)\n",
-    "print(dataset.shape)\n",
-    "print(dataset.head())\n",
-    "\n",
-    "# Exploratory Data Analysis\n",
-    "\n",
-    "## selecting important columns only (dropping 'offense_rating')\n",
-    "dataset = dataset[['id', 'text', 'is_humor', 'humor_rating', 'humor_controversy']]\n",
     "print(dataset.shape)\n",
     "print(dataset.head())\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 5)\n",
+      "   id                                               text  is_humor  \\\n",
+      "0   1  TENNESSEE: We're the best state. Nobody even c...         1   \n",
+      "1   2  A man inserted an advertisement in the classif...         1   \n",
+      "2   3  How many men does it take to open a can of bee...         1   \n",
+      "3   4  Told my mom I hit 1200 Twitter followers. She ...         1   \n",
+      "4   5  Roses are dead. Love is fake. Weddings are bas...         1   \n",
+      "\n",
+      "   humor_rating  humor_controversy  \n",
+      "0          2.42                1.0  \n",
+      "1          2.50                1.0  \n",
+      "2          1.95                0.0  \n",
+      "3          2.11                1.0  \n",
+      "4          2.78                0.0  \n",
+      "\n",
+      "----- Describe ------\n",
+      "                id     is_humor  humor_rating  humor_controversy\n",
+      "count  1000.000000  1000.000000    616.000000         616.000000\n",
+      "mean    500.500000     0.616000      2.263393           0.517857\n",
+      "std     288.819436     0.486601      0.571492           0.500087\n",
+      "min       1.000000     0.000000      0.100000           0.000000\n",
+      "25%     250.750000     0.000000      1.865000           0.000000\n",
+      "50%     500.500000     1.000000      2.300000           1.000000\n",
+      "75%     750.250000     1.000000      2.650000           1.000000\n",
+      "max    1000.000000     1.000000      3.850000           1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# selecting important columns only\n",
+    "# dropping 'offense_rating'\n",
+    "dataset = dataset[['id', 'text', 'is_humor', 'humor_rating', 'humor_controversy']]\n",
+    "print(dataset.shape)\n",
+    "print(dataset.head())\n",
+    "\n",
+    "print(\"\\n----- Describe ------\")\n",
+    "print(dataset.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "\n",
     "data_list =[]\n",
     "data_list2 =[]\n",
+    "\n",
     "raw_text =\"\"\n",
     "stop_words = tuple(set(stopwords.words(\"english\")))\n",
     "\n",
@@ -97,18 +152,18 @@
     "\n",
     "# Simple test\n",
     "def input_test(classifier):\n",
-    "    rev = input(\"Enter joke: \")\n",
-    "    rev = re.sub('[^a-zA-Z]', ' ', rev).lower().split()\n",
-    "    rev = ' '.join([lemmatizer.lemmatize(word, get_wordnet_pos(word)) for word in rev])\n",
-    "    X = vectorizer.transform([rev]).toarray()\n",
+    "    sample_text = input(\"Enter joke: \")\n",
+    "    sample_text = re.sub('[^a-zA-Z]', ' ', sample_text).lower().split()\n",
+    "    sample_text = ' '.join([lemmatizer.lemmatize(word, get_wordnet_pos(word)) for word in sample_text])\n",
+    "    X = vectorizer.transform([sample_text]).toarray()\n",
     "\n",
     "    print(X.shape)\n",
     "    print(X)\n",
     "\n",
     "    if(classifier.predict(X) == [1]):\n",
-    "        print(\"It's a joke!\")\n",
+    "        print(\"It's a joke! (+)\")\n",
     "    else:\n",
-    "        print(\"It's not a joke!\")\n",
+    "        print(\"It's not a joke! (-)\")\n",
     "\n",
     "\n",
     "# range = dataset range\n",
@@ -132,14 +187,23 @@
     "   #raw_text += aux_reader+ \"\\n\"\n",
     "   \n",
     "    \n",
-    "   \n",
+    "   # aggregate all the rows of the dataset in one corpus ('data_list')\n",
     "   data_list.append(humor_sentence)\n",
+    "    \n",
+    "    # how data_list2 is different from data_list?\n",
     "   data_list2.append(humor_sentence2) \n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract features from data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -152,17 +216,25 @@
     }
    ],
    "source": [
+    "\n",
     "# Create bag-of-words model\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "\n",
     "vectorizer = CountVectorizer(max_features = 8000)\n",
-    "X = vectorizer.fit_transform(data_list).toarray()\n",
+    "X = vectorizer.fit_transform(data_list).toarray() # no. of features per phrase (phrase=X[row])\n",
     "y = dataset.iloc[:,2].values\n",
     "\n",
     "\n",
     "print(vectorizer.get_feature_names())\n",
     "print(X.shape, y.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split dataset into training and test sets"
    ]
   },
   {
@@ -180,7 +252,6 @@
     }
    ],
    "source": [
-    "# Split dataset into training and test sets\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -189,6 +260,51 @@
     "\n",
     "print(X_train.shape, y_train.shape)\n",
     "print(X_test.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "def print_metrics(y_test, y_pred):\n",
+    "    # confusion matrix\n",
+    "    print(confusion_matrix(y_test, y_pred))\n",
+    "\n",
+    "    # accuracy\n",
+    "    print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
+    "\n",
+    "    # precision\n",
+    "    print('Precision: ', precision_score(y_test, y_pred))\n",
+    "\n",
+    "    # recall\n",
+    "    print('Recall: ', recall_score(y_test, y_pred))\n",
+    "\n",
+    "    # f1\n",
+    "    print('F1: ', f1_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Text Classification"
    ]
   },
   {
@@ -213,6 +329,7 @@
     }
    ],
    "source": [
+    "\n",
     "# Fit Naive Bayes to the training set\n",
     "\n",
     "from sklearn.naive_bayes import GaussianNB\n",
@@ -228,45 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 85  34]\n",
-      " [ 63 118]]\n",
-      "Accuracy:  0.6766666666666666\n",
-      "Precision:  0.7763157894736842\n",
-      "Recall:  0.6519337016574586\n",
-      "F1:  0.7087087087087086\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Generate metrics\n",
-    "\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
-    "from sklearn.metrics import f1_score\n",
-    "\n",
-    "# confusion matrix\n",
-    "print(confusion_matrix(y_test, y_pred))\n",
-    "\n",
-    "# accuracy\n",
-    "print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
-    "\n",
-    "# precision\n",
-    "print('Precision: ', precision_score(y_test, y_pred))\n",
-    "\n",
-    "# recall\n",
-    "print('Recall: ', recall_score(y_test, y_pred))\n",
-    "\n",
-    "# f1\n",
-    "print('F1: ', f1_score(y_test, y_pred))"
+    "\n"
    ]
   },
   {
@@ -291,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -316,11 +399,7 @@
     "classifier.fit(X_train, y_train)\n",
     "y_pred = classifier.predict(X_test)\n",
     "\n",
-    "print(confusion_matrix(y_test, y_pred))\n",
-    "print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
-    "print('Precision: ', precision_score(y_test, y_pred))\n",
-    "print('Recall: ', recall_score(y_test, y_pred))\n",
-    "print('F1: ', f1_score(y_test, y_pred))"
+    "print_metrics(y_test, y_pred)"
    ]
   },
   {
@@ -368,11 +447,7 @@
     "classifier.fit(X_train, y_train)\n",
     "y_pred = classifier.predict(X_test)\n",
     "\n",
-    "print(confusion_matrix(y_test, y_pred))\n",
-    "print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
-    "print('Precision: ', precision_score(y_test, y_pred))\n",
-    "print('Recall: ', recall_score(y_test, y_pred))\n",
-    "print('F1: ', f1_score(y_test, y_pred))"
+    "print_metrics(y_test, y_pred)"
    ]
   },
   {
@@ -420,11 +495,7 @@
     "classifier.fit(X_train, y_train)\n",
     "y_pred = classifier.predict(X_test)\n",
     "\n",
-    "print(confusion_matrix(y_test, y_pred))\n",
-    "print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
-    "print('Precision: ', precision_score(y_test, y_pred))\n",
-    "print('Recall: ', recall_score(y_test, y_pred))\n",
-    "print('F1: ', f1_score(y_test, y_pred))"
+    "print_metrics(y_test, y_pred)"
    ]
   },
   {
@@ -449,19 +520,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 77  42]\n",
-      " [ 29 152]]\n",
-      "Accuracy:  0.7633333333333333\n",
-      "Precision:  0.7835051546391752\n",
-      "Recall:  0.8397790055248618\n",
-      "F1:  0.8106666666666666\n"
+      "[[ 26  54]\n",
+      " [  3 117]]\n",
+      "Accuracy:  0.715\n",
+      "Precision:  0.6842105263157895\n",
+      "Recall:  0.975\n",
+      "F1:  0.8041237113402062\n"
      ]
     }
    ],
@@ -471,16 +542,12 @@
     "classifier.fit(X_train, y_train)\n",
     "y_pred = classifier.predict(X_test)\n",
     "\n",
-    "print(confusion_matrix(y_test, y_pred))\n",
-    "print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
-    "print('Precision: ', precision_score(y_test, y_pred))\n",
-    "print('Recall: ', recall_score(y_test, y_pred))\n",
-    "print('F1: ', f1_score(y_test, y_pred))"
+    "print_metrics(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +557,7 @@
       "Enter joke: I once toasted the bride and groom at a Pakistani wedding. All I did was push the button on the drone\n",
       "(1, 3973)\n",
       "[[0 0 0 ... 0 0 0]]\n",
-      "It's a joke!\n"
+      "It's a joke! (+)\n"
      ]
     }
    ],
