--- a/proj2/proj2.ipynb
+++ b/proj2/proj2.ipynb
@@ -276,7 +276,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import precision_score\n",
@@ -309,22 +308,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 0 0 1 1 0 1 0 1 1 0 0 1 1 1 1 0 1 0 0 1 0 1 0 1 1 0 0 0 0 0 0 1 1 0 1 0\n",
-      " 1 0 1 1 1 0 0 1 1 0 1 0 1 0 1 0 1 1 1 0 1 0 1 0 0 0 0 1 1 1 0 0 1 0 1 0 1\n",
-      " 1 1 0 1 0 1 1 1 1 0 1 0 0 0 0 0 0 1 1 1 0 1 0 0 1 0 1 1 1 1 1 0 1 1 0 0 1\n",
-      " 0 1 0 0 0 1 1 1 0 0 1 1 0 0 0 0 1 1 0 0 0 1 1 1 0 0 0 0 1 1 1 1 1 0 0 1 0\n",
-      " 0 0 0 1 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 1 0 1 1 0 0 0 1 1 0 1 1 0 1 1 1 0 0\n",
-      " 1 1 1 0 0 1 0 1 0 1 0 0 0 0 1 0 1 1 1 1 0 1 1 0 1 0 1 1 1 1 0 1 0 0 1 0 1\n",
-      " 1 1 0 1 0 0 0 1 0 0 0 0 1 0 1 1 0 0 0 1 1 1 0 1 1 1 0 1 1 1 0 1 0 0 1 1 0\n",
-      " 1 1 1 0 0 0 1 1 1 1 0 1 0 1 1 0 0 0 1 1 1 1 1 1 0 0 1 0 0 0 0 0 1 1 0 0 1\n",
-      " 0 1 1 0]\n"
+      "[1 0 0 1 1 0 1 0 1 1 0 0 1 1 1 1 0 1 0 0 1 0 1 0 1 1 0 0 1 1 0 0 1 1 0 1 0\n",
+      " 1 0 1 1 1 0 0 1 1 0 1 0 1 0 1 0 1 1 1 0 1 0 1 0 0 1 0 1 1 1 0 0 1 0 1 0 1\n",
+      " 1 1 0 1 1 1 1 1 1 0 1 0 0 0 0 0 0 1 1 1 0 1 0 0 1 0 1 1 1 1 1 0 1 1 0 0 1\n",
+      " 0 1 1 0 0 1 1 1 0 0 1 1 0 0 0 0 0 1 0 0 0 1 1 1 1 0 0 0 1 1 1 1 1 0 0 1 0\n",
+      " 0 0 0 1 1 0 0 0 0 0 0 0 1 1 1 0 0 0 0 1 0 1 1 0 0 0 1 1 0 1 1 0 1 1 1 0 0\n",
+      " 1 1 0 0 0 1 0 1 0 1 0 0 0 0 1]\n",
+      "[[58 22]\n",
+      " [40 80]]\n",
+      "Accuracy:  0.69\n",
+      "Precision:  0.7843137254901961\n",
+      "Recall:  0.6666666666666666\n",
+      "F1:  0.7207207207207207\n"
      ]
     }
    ],
@@ -340,16 +342,8 @@
     "# Predict test set results\n",
     "y_pred = classifier.predict(X_test)\n",
     "\n",
-    "print(y_pred)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
+    "print(y_pred)\n",
+    "print_metrics(y_test, y_pred)\n"
    ]
   },
   {
