--- a/proj2/proj2.ipynb
+++ b/proj2/proj2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "10           NaN                NaN  "
       ]
      },
-     "execution_count": 228,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "(384, 5)"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
        "<BarContainer object of 10 artists>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -510,7 +510,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "corpus=[\n",
+    "corpus=[]\n",
     "stop = set(stopwords.words('english'))\n",
     "words = dataset['text'].str.split()\n",
     "words = words.values.tolist()\n",
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,44 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 71   9]\n",
-      " [  3 117]]\n",
-      "Accuracy:  0.94\n",
-      "Precision:  0.9285714285714286\n",
-      "Recall:  0.975\n",
-      "F1:  0.951219512195122\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.neural_network import MLPClassifier\n",
-    "\n",
-    "classifier = MLPClassifier()\n",
-    "classifier.fit(X_train, y_train)\n",
-    "y_pred = classifier.predict(X_test)\n",
-    "\n",
-    "print_metrics(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#input_test(classifier)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1138,6 +1101,43 @@
     }
    ],
    "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "classifier = MLPClassifier()\n",
+    "classifier.fit(X_train, y_train)\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "print_metrics(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#input_test(classifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 71   9]\n",
+      " [  3 117]]\n",
+      "Accuracy:  0.94\n",
+      "Precision:  0.9285714285714286\n",
+      "Recall:  0.975\n",
+      "F1:  0.951219512195122\n"
+     ]
+    }
+   ],
+   "source": [
     "from sklearn.neural_network import BernoulliRBM\n",
     "lassifier = BernoulliRBM()\n",
     "classifier.fit(X_train, y_train)\n",
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1208,6 +1208,13 @@
     "\n",
     "print_metrics(y_test, y_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
